update the code

--- a/Configuration/Config.properties
+++ b/Configuration/Config.properties
@@ -1,5 +1,5 @@
 url=https://demo.nopcommerce.com/
-uname=papa@gmail.com
+uname=qaz@gmail.com
 pswd=p@12345
 productName=Apple MacBook Pro 13-inch
 enterNumber=3
